[mail] fix thing actions not available from UI
Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>